--- a/app_admin/templates/students/list.html
+++ b/app_admin/templates/students/list.html
@@ -81,7 +81,7 @@
          </div>
 
          <div class="bg-light p-2">
-            <div class="row mb-1">
+            <!-- <div class="row mb-1">
                <div class="col-md-8">
                   <select class="form-control" id="ddlCourses" name="course">
                      <option value="">Select Course</option>
@@ -96,7 +96,7 @@
                   </div>
 
                </div>
-            </div>
+            </div> -->
 
          </div>
 
