--- a/app_students/templates/profile/switch_business.html
+++ b/app_students/templates/profile/switch_business.html
@@ -33,7 +33,7 @@ Switch to Business Account
                                     <li>You will not be able to enroll in courses yourself.</li>
                                     <li>You can create employee accounts and assign courses to them.</li>
                                     <li>You can find more details here <a title="Business Account Features & Demo"
-                                            href="{% url 'business_account_features' %}"> View Features & Demo!</a></li>
+                                            href="{% url 'business_account_features' %}" target="_blank"> View Features & Demo!</a></li>
                                 </ul>
                             </div>
 
