business orders history

--- a/app_business/templates/business_base.html
+++ b/app_business/templates/business_base.html
@@ -89,6 +89,9 @@
                 <a class="nav-link" href="{% url 'business_buy_courses' %}">Buy Courses</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'business_purchase_history' %}">Orders History</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'business_my_cart' %}">My Cart</a>
               </li>
 
