--- a/app_business/templates/business_courses/buy.html
+++ b/app_business/templates/business_courses/buy.html
@@ -30,8 +30,14 @@
                 </div>
             </div>
         </form>
+
         <div class="row">
             <div class="col-md-12">
+
+                <p class="alert alert-primary d-none">
+                    Note: Free courses are not included in this list. We offer a separate solution for accessing free courses.
+                    <a href="">Please click here</a>
+                </p>
                 <table class="table table-bordered bg-white" id="tblProducts">
                     <thead>
                         <tr>
