--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -107,14 +107,14 @@
                         <a class="text-white" title="mail@pdhsafety.com" href="mailto:mail@pdhsafety.com">mail@pdhsafety.com</a>
                      </li>
                   </ul>
-                  <div class="header-socials header-socials-v2">
+                  {% comment %} <div class="header-socials header-socials-v2 d-none d-md-none d-lg-block d-xl-block">
                      <ul>
                          <li><a title="facebook" target="_blank" href="https://www.facebook.com/people/NYC-Construction-Safety-Training/61561593072255/"><i class="fab fa-facebook-f"></i></a></li>
                          <li><a title="x" target="_blank" href="https://x.com/nyc_safety"><i class="fab fa-twitter"></i></a></li>
                          <li><a title="linkedin" target="_blank" href="https://www.linkedin.com/company/nyc-construction-safety-training/"><i class="fab fa-linkedin"></i></a></li>
                          <li><a title="instagram" target="_blank" href="https://www.instagram.com/nyccst/"><i class="fab fa-pinterest"></i></a></li>
                      </ul>
-                 </div>
+                 </div> {% endcomment %}
                </div>
                <div class="col-lg-8 col-md-8">
                   <div class="header-right float-right">
@@ -170,7 +170,7 @@
                   <img src="{% static 'edutim/images/logo100.png' %}" width="100" height="100"
                      alt="Make Safety Training Happen" title="NYC Construction Safety Training (PdhSafety.com)" class="img-fluid" />
                </a>
-               <span class="mr-auto top-logo-tagline d-none d-md-block d-lg-block d-xl-block">Make Safety Training Happen</span>
+               <span class="mr-auto top-logo-tagline d-none d-md-none d-lg-block d-xl-block">Make Safety Training Happen</span>
 
                <form method="get" class="" action="{% url 'courses_list' %}">
                   <div class="input-group top-search-wrap">
@@ -376,6 +376,9 @@
                      </li>
                      <li>
                         <a title="FAQs" href="/faq/">FAQs</a>
+                     </li>
+                     <li>
+                        <a title=" Student Manual" href="{% url 'student_manual_detail' %}"> Student Manual</a>
                      </li>
                   </ul>
                </div>
