--- a/app_public/templates/student_manual/student_manual.html
+++ b/app_public/templates/student_manual/student_manual.html
@@ -30,37 +30,75 @@
         <div class="container">
             <div class="row">
                 <div class="col">
+
                     <div>
-                        <strong>Anti-Discrimination Policy</strong>
+                        <div>
+                            <strong>
+                                Proprietary Interest Policy
+                            </strong>
+                        </div>
+                        <p>
+                            It is the policy of NYCCST that the Proprietary Interest of Trainers/Instructors is
+                            disclosed.
+                            <br>
+                            Any set of learning materials used to conduct a training, or learning event, that is created
+                            by
+                            an individual,
+                            independent of NYCCST funding and guidance, will be credited to the individual.
+                            <br>
+                            At the beginning of each learning event the instructor will disclose proprietary interest
+                            and
+                            relay that the
+                            materials used for instruction at NYCCST do not violate any personal or property rights of
+                            any
+                            other
+                            organization or individual.
+                            <br>
+                            Courses and other learning materials created by an individual are to be licensed for use at
+                            NYCCST and the
+                            developer shall be credited for the presented material. NYCCST holds no financial obligation
+                            to
+                            any other 3rd
+                            party organization for the development, use, and distribution of learning materials.
+                        </p>
                     </div>
                     <div>
-                        <p>
-                            NYCCST does not tolerate discrimination, nor tolerate explicit references of a
-                            discriminatory nature, based on
-                            gender, gender identity, gender expression, race, nationality, color, religion, age,
-                            disability, veteran status,
-                            socioeconomic status, marital status, pregnancy, and/or sexual orientation.
+                        <div>
+                            <strong>Anti-Discrimination Policy</strong>
+                        </div>
+                        <div>
+                            <p>
+                                NYCCST does not tolerate discrimination, nor tolerate explicit references of a
+                                discriminatory nature, based on
+                                gender, gender identity, gender expression, race, nationality, color, religion, age,
+                                disability, veteran status,
+                                socioeconomic status, marital status, pregnancy, and/or sexual orientation.
 
 
-                        </p>
+                            </p>
 
-                        <p>
-                            Harassment and/or intimidation based on any protected characteristic is strictly prohibited.
-                            All the following are
-                            considered harassment and/or intimidation: Written communications, verbal communications, or
-                            physical
-                            gestures or behavior that shows hostility, aversion, or bigotry toward an individual. Sexual
-                            harassment in the
-                            form of written, physical, and/or verbal communications or behavior is also prohibited.
-                        </p>
-                        <p>
-                            Incidents of harassment should be immediately reported to an administrator of the
-                            organization who will
-                            promptly arrange an internal investigation regarding the matter. NYCCST prohibits acts of
-                            retaliation against
-                            individuals who report or cooperate with investigations of harassment and discrimination
-                            cases.
-                        </p>
+                            <p>
+                                Harassment and/or intimidation based on any protected characteristic is strictly
+                                prohibited.
+                                All the following are
+                                considered harassment and/or intimidation: Written communications, verbal
+                                communications, or
+                                physical
+                                gestures or behavior that shows hostility, aversion, or bigotry toward an individual.
+                                Sexual
+                                harassment in the
+                                form of written, physical, and/or verbal communications or behavior is also prohibited.
+                            </p>
+                            <p>
+                                Incidents of harassment should be immediately reported to an administrator of the
+                                organization who will
+                                promptly arrange an internal investigation regarding the matter. NYCCST prohibits acts
+                                of
+                                retaliation against
+                                individuals who report or cooperate with investigations of harassment and discrimination
+                                cases.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
