--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -174,7 +174,7 @@
 
                <form method="get" class="" action="{% url 'courses_list' %}">
                   <div class="input-group top-search-wrap">
-                     <input type="text" class="form-control" id="textQ" name="q"
+                     <input autocomplete="off" type="text" class="form-control" id="textQ" name="q"
                         placeholder="What do you want to learn?" title="Search courses here. " />
                      <div class="input-group-append">
 
