--- a/app_students/templates/courses/detail.html
+++ b/app_students/templates/courses/detail.html
@@ -2,6 +2,9 @@
 {{ object.title }}
 {% endblock %}
 
+{% block after_header %}
+{% endblock %}
+
 {% block content %}
 <nav id="topNavbar" class="navbar navbar-expand-lg navbar-light bg-light">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
