--- a/app_public/templates/faq/faq.html
+++ b/app_public/templates/faq/faq.html
@@ -132,6 +132,18 @@
                                 </div>
                             </div>
                             <!-- end card -->
+                              
+                            <div class="card mt-2" id="student-certificate">
+                                <div class="card-header">
+                                    <strong>
+                                        How to download certificate?
+                                    </strong>
+                                </div>
+                                <div class="card-body">
+                                    <div style="padding:47.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1052206390?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Pdhsafety - How to download certificate"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+                                </div>
+                            </div>
+                            <!-- end card -->
                         </div>
                     </div>
                 </div>
